--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
+<script src="https://apis.google.com/js/api.js?mods=enable_cloud_search_widget&onload=onLoad" async defer></script>
+
+
 <h1>Altostrat Tickets</h1>
+
+<div id="search_bar">
+  <div id="suggestions_anchor">
+    <input type="text" id="search_input" placeholder="Search for...">
+  </div>
+</div>
+<div id="facet_results"></div>
+<div id="search_results"></div>
+
+
+<script>
+  /**
+  * Client ID from OAuth credentials.
+  */
+  var clientId = "524163366384-f5aip1l5bt1ae8g7av3eq6bj0497jjtg.apps.googleusercontent.com";
+
+  /**
+  * Full resource name of the search application, such as
+  * "searchapplications/<your-id>".
+  */
+  var searchApplicationName = "searchapplications/7adc1f088e9244d87387e446d16a284a";
+  
+  /**
+  * Load the cloud search widget & auth libraries. Runs after
+  * the initial gapi bootstrap library is ready.
+  */
+  function onLoad() {
+    gapi.load('client:auth2:cloudsearch-widget', initializeApp)
+  }
+  
+  /**
+   * Initialize the app after loading the Google API client &
+   * Cloud Search widget.
+   */
+  function initializeApp() {
+    // Load client ID & search app.
+    loadConfiguration().then(function() {
+      // Set API version to v1.
+      gapi.config.update('cloudsearch.config/apiVersion', 'v1');
+
+      // Build the result container and bind to DOM elements.
+      var resultsContainer = new gapi.cloudsearch.widget.resultscontainer.Builder()
+        .setSearchApplicationId(searchApplicationName)
+        .setSearchResultsContainerElement(document.getElementById('search_results'))
+        .setFacetResultsContainerElement(document.getElementById('facet_results'))
+        .build();
+
+      // Build the search box and bind to DOM elements.
+      var searchBox = new gapi.cloudsearch.widget.searchbox.Builder()
+        .setSearchApplicationId(searchApplicationName)
+        .setInput(document.getElementById('search_input'))
+        .setAnchor(document.getElementById('suggestions_anchor'))
+        .setResultsContainer(resultsContainer)
+        .build();
+    }).then(function() {
+      // Init API/oauth client w/client ID.
+      return gapi.auth2.init({
+          'clientId': clientId,
+          'scope': 'https://www.googleapis.com/auth/cloud_search.query'
+      });
+    });
+  }
+</script>
